crates/ruff_linter/src/rules/flake8_print/snapshots/ruff_linter__rules__flake8_print__tests__T203_T203.py.snap
---
source: crates/ruff_linter/src/rules/flake8_print/mod.rs
---
T203 [*] `pprint` found
 --> T203.py:5:1
  |
3 | from pprint import pprint
4 |
5 | pprint("Hello, world!")  # T203
  | ^^^^^^
6 | pprint("Hello, world!", stream=None)  # T203
7 | pprint("Hello, world!", stream=sys.stdout)  # T203
  |
help: Remove `pprint`
  |
5 - pprint("Hello, world!")  # T203
  |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
 --> T203.py:6:1
  |
5 | pprint("Hello, world!")  # T203
6 | pprint("Hello, world!", stream=None)  # T203
  | ^^^^^^
7 | pprint("Hello, world!", stream=sys.stdout)  # T203
8 | pprint("Hello, world!", stream=sys.stderr)  # T203
  |
help: Remove `pprint`
  |
6 - pprint("Hello, world!", stream=None)  # T203
  |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
 --> T203.py:7:1
  |
5 | pprint("Hello, world!")  # T203
6 | pprint("Hello, world!", stream=None)  # T203
7 | pprint("Hello, world!", stream=sys.stdout)  # T203
  | ^^^^^^
8 | pprint("Hello, world!", stream=sys.stderr)  # T203
  |
help: Remove `pprint`
  |
7 - pprint("Hello, world!", stream=sys.stdout)  # T203
  |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
  --> T203.py:8:1
   |
 6 | pprint("Hello, world!", stream=None)  # T203
 7 | pprint("Hello, world!", stream=sys.stdout)  # T203
 8 | pprint("Hello, world!", stream=sys.stderr)  # T203
   | ^^^^^^
 9 |
10 | with tempfile.NamedTemporaryFile() as fp:
   |
help: Remove `pprint`
  |
8 - pprint("Hello, world!", stream=sys.stderr)  # T203
  |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
  --> T203.py:15:1
   |
13 | import pprint
14 |
15 | pprint.pprint("Hello, world!")  # T203
   | ^^^^^^^^^^^^^
16 | pprint.pprint("Hello, world!", stream=None)  # T203
17 | pprint.pprint("Hello, world!", stream=sys.stdout)  # T203
   |
help: Remove `pprint`
   |
15 - pprint.pprint("Hello, world!")  # T203
   |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
  --> T203.py:16:1
   |
15 | pprint.pprint("Hello, world!")  # T203
16 | pprint.pprint("Hello, world!", stream=None)  # T203
   | ^^^^^^^^^^^^^
17 | pprint.pprint("Hello, world!", stream=sys.stdout)  # T203
18 | pprint.pprint("Hello, world!", stream=sys.stderr)  # T203
   |
help: Remove `pprint`
   |
16 - pprint.pprint("Hello, world!", stream=None)  # T203
   |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
  --> T203.py:17:1
   |
15 | pprint.pprint("Hello, world!")  # T203
16 | pprint.pprint("Hello, world!", stream=None)  # T203
17 | pprint.pprint("Hello, world!", stream=sys.stdout)  # T203
   | ^^^^^^^^^^^^^
18 | pprint.pprint("Hello, world!", stream=sys.stderr)  # T203
   |
help: Remove `pprint`
   |
17 - pprint.pprint("Hello, world!", stream=sys.stdout)  # T203
   |
note: This is an unsafe fix and may change runtime behavior

T203 [*] `pprint` found
  --> T203.py:18:1
   |
16 | pprint.pprint("Hello, world!", stream=None)  # T203
17 | pprint.pprint("Hello, world!", stream=sys.stdout)  # T203
18 | pprint.pprint("Hello, world!", stream=sys.stderr)  # T203
   | ^^^^^^^^^^^^^
19 |
20 | with tempfile.NamedTemporaryFile() as fp:
   |
help: Remove `pprint`
   |
18 - pprint.pprint("Hello, world!", stream=sys.stderr)  # T203
   |
note: This is an unsafe fix and may change runtime behavior
